--- a/ExpenseTrackerGM/pom.xml
+++ b/ExpenseTrackerGM/pom.xml
@@ -14,21 +14,6 @@
     	<version>3.4</version>
     </dependency>
     <dependency>
-    	<groupId>org.hibernate</groupId>
-    	<artifactId>hibernate-core</artifactId>
-    	<version>4.3.0.Final</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.hibernate</groupId>
-    	<artifactId>hibernate-commons-annotations</artifactId>
-    	<version>3.2.0.Final</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.hibernate.javax.persistence</groupId>
-    	<artifactId>hibernate-jpa-2.0-api</artifactId>
-    	<version>1.0.1.Final</version>
-    </dependency>
-    <dependency>
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-aop</artifactId>
     </dependency>
@@ -102,11 +87,6 @@
     	<groupId>org.apache.commons</groupId>
     	<artifactId>commons-dbcp2</artifactId>
     	<version>2.1.1</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.apache.commons</groupId>
-    	<artifactId>commons-io</artifactId>
-    	<version>1.3.2</version>
     </dependency>
     <dependency>
     	<groupId>commons-logging</groupId>
@@ -183,9 +163,45 @@
     	<artifactId>javax.servlet-api</artifactId>
     	<version>3.1.0</version>
     </dependency>
+    <dependency>
+    	<groupId>commons-dbcp</groupId>
+    	<artifactId>commons-dbcp</artifactId>
+    	<version>1.4</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.hibernate.common</groupId>
+    	<artifactId>hibernate-commons-annotations</artifactId>
+    	<version>4.0.2.Final</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.hibernate</groupId>
+    	<artifactId>hibernate-core</artifactId>
+    	<version>4.2.8.Final</version>
+    </dependency>
+    <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>jstl</artifactId>
+    	<version>1.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>commons-io</groupId>
+    	<artifactId>commons-io</artifactId>
+    	<version>2.4</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>ExpenseTrackerGM</finalName>
+	<plugins>
+	    <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-compiler-plugin</artifactId>
+	        <version>3.2</version>
+	        <configuration>
+	            <source>1.8</source>
+	            <target>1.8</target>
+	        </configuration>
+	    </plugin>
+	</plugins>
   </build>
   <dependencyManagement>
   	<dependencies>
