Works with MySQL & published in AWS.

--- a/ExpenseTrackerGG/src/main/resources/expense.properties
+++ b/ExpenseTrackerGG/src/main/resources/expense.properties
@@ -1,4 +1,4 @@
-AUTO_LOGIN = Y
+AUTO_LOGIN = N
 UID = anitha
 PWD = 2281
 
@@ -9,7 +9,8 @@ LIST.EXPENSES.LIMIT = 200
 #DOJO.PATH = /Dojo/dojo
 DOJO.PATH = //ajax.googleapis.com/ajax/libs/dojo/1.10.4
 
-# Keep this in synch with util/messages.js.
-APP.PATH = /ExpenseTrackerGG
-APP.NAME = Expense TrackerGG
+# Keep this in synch with expense.js.
+#APP.PATH = /ExpenseTrackerGG
+APP.PATH = /.
+APP.NAME = Expense Tracker
 
