Final commit from Toshiba

--- a/ExpenseTrackerGG/src/main/resources/expense.properties
+++ b/ExpenseTrackerGG/src/main/resources/expense.properties
@@ -1,4 +1,4 @@
-AUTO_LOGIN = N
+AUTO_LOGIN = Y
 UID = anitha
 PWD = 2281
 
@@ -6,11 +6,11 @@ PAGE.SIZE = 12
 DUE.DATE.WARNING = 7
 LIST.EXPENSES.LIMIT = 200
 
-#DOJO.PATH = /Dojo/dojo
-DOJO.PATH = //ajax.googleapis.com/ajax/libs/dojo/1.10.4
+DOJO.PATH = /Dojo/dojo
+#DOJO.PATH = //ajax.googleapis.com/ajax/libs/dojo/1.10.4
 
 # Keep this in synch with expense.js.
-#APP.PATH = /ExpenseTrackerGG
-APP.PATH = /.
+APP.PATH = /ExpenseTrackerGG
+#APP.PATH = /.
 APP.NAME = Expense Tracker
 
