Customizations in new laptop

--- a/ExpenseTrackerGG/src/main/resources/jdbc.properties
+++ b/ExpenseTrackerGG/src/main/resources/jdbc.properties
@@ -11,7 +11,7 @@
 jdbc.driverClassName = org.sqlite.JDBC
 jdbc.dialect = com.expense.utils.SQLiteDialect
 jdbc.catalog = main
-jdbc.url = jdbc:sqlite:D:/Java/SQLite/Data/Test2.db
-#jdbc.url = jdbc:sqlite:D:/Java/SQLite/Data/Prod.db
+jdbc.url = jdbc:sqlite:C:/Java/SQLite/Data/Test2.db
+#jdbc.url = jdbc:sqlite:C:/Java/SQLite/Data/Prod.db
 jdbc.username = 
 jdbc.password = 
