--- a/ExpenseTrackerGG/src/main/resources/log4j.properties
+++ b/ExpenseTrackerGG/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.file.File=D\:\\Java\\logs\\ExpenseTracker.log
+log4j.appender.file.File=C\:\\Java\\logs\\ExpenseTracker.log
 #log4j.appender.file.File=ExpenseTrackerNew.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d %-5p %c{1} - %m%n
